feat(ai): 完成仓储助手SLICE-03查询与重试链